k8-deployment/test/ingresRoute.yaml
---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: test-cert
  namespace: test
spec:
  commonName: test.anup.co.in
  secretName: test-cert
  dnsNames:
    - "test.anup.co.in"
  issuerRef:
    kind: ClusterIssuer
    name: letsencrypt-prod
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo
  namespace: test
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.anup.co.in`)
      kind: Rule
      services:
        - name: podinfo
          kind: TraefikService
          port: 80
  tls:
    secretName: test-cert
